--- a/01.ipynb
+++ b/01.ipynb
@@ -98,7 +98,39 @@
     "        filenames = zip_ref.namelist()\n",
     "    with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
     "        zip_ref.extract(filenames[0])\n",
-    "    return filenames[0]"
+    "    return filenames[0]\n",
+    "\n",
+    "# Функция для запроса к API Яндекса\n",
+    "def get_org_geo(row):\n",
+    "    if pd.notna(row['geoData']):\n",
+    "        return row['geoData']\n",
+    "    \n",
+    "    key = f\"{row['AdmArea']}_{row['District']}_{row['EDU_NAME']}\"\n",
+    "    if key in geo_cache:\n",
+    "        return geo_cache[key]\n",
+    "    \n",
+    "    url = \"https://search-maps.yandex.ru/v1/\"\n",
+    "    params = {\n",
+    "        \"apikey\": YANDEX_ORG,\n",
+    "        \"lang\": \"ru_RU\",\n",
+    "        \"text\": f\"Москва, {row['AdmArea']}, {row['District']}, {row['EDU_NAME']}\"\n",
+    "    }\n",
+    "    \n",
+    "    try:\n",
+    "        response = requests.get(url, params=params)\n",
+    "        data = response.json()\n",
+    "        \n",
+    "        if 'features' in data and len(data['features']) > 0:\n",
+    "            geo_data = data['features'][0]['geometry']\n",
+    "            geo_cache[key] = geo_data\n",
+    "            return geo_data\n",
+    "        else:\n",
+    "            geo_cache[key] = None\n",
+    "            return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Ошибка при запросе к API: {e}\")\n",
+    "        geo_cache[key] = None\n",
+    "        return None"
    ]
   },
   {
@@ -856,7 +888,7 @@
    "source": [
     "# Загрузка кэша из файла, если файл существует\n",
     "YANDEX_ORG = 0 # Закоментить строку если есть ключ\n",
-    "cache_file = 'geo_cache.json'\n",
+    "cache_file = 'cache_exams.json'\n",
     "if os.path.exists(cache_file):\n",
     "    with open(cache_file, 'r') as f:\n",
     "        geo_cache = json.load(f)\n",
@@ -864,39 +896,9 @@
     "    geo_cache = {}\n",
     "\n",
     "# Функция для запроса к API Яндекса\n",
-    "def get_geo_data(row):\n",
-    "    if pd.notna(row['geoData']):\n",
-    "        return row['geoData']\n",
-    "    \n",
-    "    key = f\"{row['AdmArea']}_{row['District']}_{row['EDU_NAME']}\"\n",
-    "    if key in geo_cache:\n",
-    "        return geo_cache[key]\n",
-    "    \n",
-    "    url = \"https://search-maps.yandex.ru/v1/\"\n",
-    "    params = {\n",
-    "        \"apikey\": YANDEX_ORG,\n",
-    "        \"lang\": \"ru_RU\",\n",
-    "        \"text\": f\"Москва, {row['AdmArea']}, {row['District']}, {row['EDU_NAME']}\"\n",
-    "    }\n",
-    "    \n",
-    "    try:\n",
-    "        response = requests.get(url, params=params)\n",
-    "        data = response.json()\n",
-    "        \n",
-    "        if 'features' in data and len(data['features']) > 0:\n",
-    "            geo_data = data['features'][0]['geometry']\n",
-    "            geo_cache[key] = geo_data\n",
-    "            return geo_data\n",
-    "        else:\n",
-    "            geo_cache[key] = None\n",
-    "            return None\n",
-    "    except Exception as e:\n",
-    "        print(f\"Ошибка при запросе к API: {e}\")\n",
-    "        geo_cache[key] = None\n",
-    "        return None\n",
     "\n",
     "# Применение функции к строкам DataFrame\n",
-    "exams['geoData'] = exams.apply(get_geo_data, axis=1)\n",
+    "exams['geoData'] = exams.apply(get_org_geo, axis=1)\n",
     "\n",
     "# Сохранение кэша в файл\n",
     "with open(cache_file, 'w', encoding='utf-8') as f:\n",
