--- a/02.ipynb
+++ b/02.ipynb
@@ -31,12 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "id": "e53c5526",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_cache(filename='tmp.gz'): # загрузка кэша\n",
+    "def default_serializer(obj): # для правильного преобразования даты в ISO формат\n",
+    "    if isinstance(obj, (date)):\n",
+    "        return obj.isoformat()\n",
+    "    raise TypeError(f'Object of type {obj.__class__.__name__} is not JSON serializable')\n",
+    "    \n",
+    "\n",
+    "def load_cache(filename='cache.gz'): # загрузка кэша\n",
     "    global CACHE\n",
     "    if os.path.exists(filename) and len(CACHE)==0:\n",
     "        with gzip.open(filename, 'rb') as gzip_ref:\n",
@@ -44,29 +50,76 @@
     "        print(f'Загружено {len(CACHE)} записей из {filename} в кэш')\n",
     "\n",
     "\n",
-    "def save_cache(filename='tmp.gz'): # сохранение кэша\n",
+    "def save_cache(filename='cache.gz'): # сохранение кэша\n",
     "    global CACHE\n",
     "    with gzip.open(filename, 'wb') as gzip_file:\n",
-    "        json_data = json.dumps(CACHE, ensure_ascii=False)\n",
+    "        json_data = json.dumps(CACHE, ensure_ascii=False, default=default_serializer)\n",
     "        gzip_file.write(json_data.encode('utf-8'))\n",
     "    print(f'Сохранено {len(CACHE)} записей в {filename}')\n",
     "    \n",
     "    \n",
-    "def load_data(filename): \n",
-    "    if os.path.exists(SETS + filename):\n",
-    "        with gzip.open(SETS + filename, 'rb') as gzip_ref:\n",
+    "def load_gzon(filename): \n",
+    "    if os.path.exists(SETS + filename + '.gz'):\n",
+    "        with gzip.open(SETS + filename + '.gz', 'rb') as gzip_ref:\n",
     "            return json.load(gzip_ref)\n",
     "    else:\n",
     "        return []\n",
     "    \n",
     "\n",
-    "def save_data(df_name):\n",
-    "    df = globals()[df_name]\n",
-    "    data = df.to_json(orient='records', lines=True)\n",
-    "    with gzip.open(SETS + df_name + '.gz', 'wb') as gzip_file:\n",
-    "        gzip_file.write(data.encode('utf-8'))\n",
-    "    print(f'Сохранено {len(df)} записей в {df_name}.gz')\n",
+    "def save_gzon(filename):\n",
+    "    data = globals().get(filename)\n",
+    "    if data is not None:\n",
+    "        json_data = json.dumps(data, ensure_ascii=False, default=default_serializer)\n",
+    "        with gzip.open(SETS + filename + '.gz', 'wb') as gzip_file:\n",
+    "            gzip_file.write(json_data.encode('utf-8'))\n",
+    "        print(f'Сохранено {len(json_data)} записей в {filename}.gz')\n",
+    "    else:\n",
+    "        print(f'Переменная {filename} не найдена')\n",
     "        \n",
+    "     \n",
+    "def load_dataset(filename): \n",
+    "    if os.path.exists(SETS + filename + '.gz'):\n",
+    "        with gzip.open(SETS + filename + '.gz', 'rb') as gzip_ref:\n",
+    "            return pd.DataFrame(json.load(gzip_ref))\n",
+    "        \n",
+    "    \n",
+    "def save_dataset(filename):\n",
+    "    data = globals().get(filename)\n",
+    "    if data is not None:\n",
+    "        data = data.to_dict(orient='records')\n",
+    "        json_data = json.dumps(data, ensure_ascii=False, default=default_serializer)\n",
+    "        with gzip.open(SETS + filename + '.gz', 'wb') as gzip_file:\n",
+    "            gzip_file.write(json_data.encode('utf-8'))\n",
+    "        print(f'Сохранено {len(data)} записей в {filename}.gz')\n",
+    "        \n",
+    "    \n",
+    "def mos_geojson(dataset):\n",
+    "    all_data = load_gzon(dataset)\n",
+    "    if(len(all_data) > 0):\n",
+    "        return all_data\n",
+    "\n",
+    "    step = LIMIT\n",
+    "    url = \"https://apidata.mos.ru/v1\"\n",
+    "    folder = \"/datasets/\"\n",
+    "    params = {\n",
+    "        \"api_key\": DATA_MOS_RU,\n",
+    "        \"$skip\": 0\n",
+    "    }\n",
+    "    \n",
+    "    count = int(requests.get(url + folder + dataset + \"/count\", params=params).text)\n",
+    "    while count > params[\"$skip\"]:\n",
+    "        response = requests.get(url + folder + dataset + \"/rows\", params=params)\n",
+    "        data = json.loads(response.text)\n",
+    "        for d in data:\n",
+    "            all_data.append(d['Cells'])\n",
+    "        params[\"$skip\"] += step\n",
+    "    json_data = json.dumps(all_data, ensure_ascii=False)\n",
+    "    with gzip.open(SETS + dataset + '.gz', 'wb') as gzip_file:\n",
+    "        gzip_file.write(json_data.encode('utf-8'))\n",
+    "    print(f'Сохранено {len(all_data)} записей в {dataset}.gz')\n",
+    "        \n",
+    "    return all_data\n",
+    "           \n",
     "\n",
     "def get_dataset(url, encoding='utf-8', forma='geojson')->pd.DataFrame:\n",
     "    if(forma == 'geojson'):\n",
@@ -198,32 +251,6 @@
     "        geo_cache[key] = None\n",
     "        return None\n",
     "\n",
-    "    \n",
-    "def mos_geojson(dataset):\n",
-    "    filename = dataset + '.gz'\n",
-    "    all_data = load_data(filename)\n",
-    "    if(len(all_data) > 0):\n",
-    "        return all_data\n",
-    "\n",
-    "    step = LIMIT\n",
-    "    url = \"https://apidata.mos.ru/v1\"\n",
-    "    folder = \"/datasets/\"\n",
-    "    params = {\n",
-    "        \"api_key\": DATA_MOS_RU,\n",
-    "        \"$skip\": 0\n",
-    "    }\n",
-    "    \n",
-    "    count = int(requests.get(url + folder + dataset + \"/count\", params=params).text)\n",
-    "    while count > params[\"$skip\"]:\n",
-    "        response = requests.get(url + folder + dataset + \"/rows\", params=params)\n",
-    "        data = json.loads(response.text)\n",
-    "        for d in data:\n",
-    "            all_data.append(d['Cells'])\n",
-    "        params[\"$skip\"] += step\n",
-    "\n",
-    "    save_data(all_data, filename)\n",
-    "        \n",
-    "    return all_data\n",
     "\n",
     "def to_geoData(dataset, address_col):\n",
     "    global CACHE\n",
@@ -283,8 +310,7 @@
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', None) # для отображения полного текста в ячейках\n",
-    "ecology = pd.DataFrame() # Всеобъемлющий датасет по экологии\n",
-    "exams = pd.read_csv('./exams.csv', sep=';') # Всеобъемлющий датасет по экзаменам"
+    "ecology = pd.DataFrame() # Всеобъемлющий датасет по экологии"
    ]
   },
   {
@@ -554,10 +580,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Загружено 31340 записей из cache.gz в кэш\n",
-      "Сохранено 31340 записей в cache.gz\n",
-      "CPU times: user 554 ms, sys: 2.29 ms, total: 556 ms\n",
-      "Wall time: 562 ms\n"
+      "Загружено 31343 записей из cache.gz в кэш\n",
+      "Сохранено 31343 записей в cache.gz\n",
+      "CPU times: user 583 ms, sys: 3.27 ms, total: 586 ms\n",
+      "Wall time: 592 ms\n"
      ]
     }
    ],
@@ -1002,9 +1028,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сохранено 31340 записей в cache.gz\n",
-      "CPU times: user 512 ms, sys: 10.4 ms, total: 522 ms\n",
-      "Wall time: 528 ms\n"
+      "Сохранено 31343 записей в cache.gz\n",
+      "CPU times: user 501 ms, sys: 3.37 ms, total: 504 ms\n",
+      "Wall time: 509 ms\n"
      ]
     }
    ],
@@ -1682,9 +1708,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сохранено 31340 записей в cache.gz\n",
-      "CPU times: user 635 ms, sys: 3.16 ms, total: 638 ms\n",
-      "Wall time: 643 ms\n"
+      "Сохранено 31343 записей в cache.gz\n",
+      "CPU times: user 620 ms, sys: 3.09 ms, total: 624 ms\n",
+      "Wall time: 629 ms\n"
      ]
     }
    ],
@@ -1822,9 +1848,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сохранено 31340 записей в cache.gz\n",
-      "CPU times: user 1.72 s, sys: 26.1 ms, total: 1.74 s\n",
-      "Wall time: 1.75 s\n"
+      "Сохранено 31343 записей в cache.gz\n",
+      "CPU times: user 1.68 s, sys: 17.8 ms, total: 1.69 s\n",
+      "Wall time: 1.7 s\n"
      ]
     }
    ],
@@ -2957,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "id": "2fccfb6e",
    "metadata": {},
    "outputs": [
@@ -2970,7 +2996,7 @@
     }
    ],
    "source": [
-    "save_data('ecology')"
+    "save_dataset('ecology')"
    ]
   }
  ],
