--- a/02.ipynb
+++ b/02.ipynb
@@ -882,8 +882,8 @@
      "text": [
       "Загружено 31343 записей из cache.gz в кэш\n",
       "Сохранено 31343 записей в cache.gz\n",
-      "CPU times: user 613 ms, sys: 2.27 ms, total: 616 ms\n",
-      "Wall time: 862 ms\n"
+      "CPU times: user 588 ms, sys: 1.4 ms, total: 589 ms\n",
+      "Wall time: 596 ms\n"
      ]
     }
    ],
@@ -1329,8 +1329,8 @@
      "output_type": "stream",
      "text": [
       "Сохранено 31343 записей в cache.gz\n",
-      "CPU times: user 515 ms, sys: 7.84 ms, total: 523 ms\n",
-      "Wall time: 530 ms\n"
+      "CPU times: user 502 ms, sys: 5.34 ms, total: 507 ms\n",
+      "Wall time: 513 ms\n"
      ]
     }
    ],
@@ -1983,8 +1983,8 @@
      "output_type": "stream",
      "text": [
       "Сохранено 31343 записей в cache.gz\n",
-      "CPU times: user 512 ms, sys: 10.6 ms, total: 523 ms\n",
-      "Wall time: 528 ms\n"
+      "CPU times: user 494 ms, sys: 10.9 ms, total: 505 ms\n",
+      "Wall time: 510 ms\n"
      ]
     }
    ],
@@ -2123,8 +2123,8 @@
      "output_type": "stream",
      "text": [
       "Сохранено 31343 записей в cache.gz\n",
-      "CPU times: user 1.72 s, sys: 21.6 ms, total: 1.74 s\n",
-      "Wall time: 1.75 s\n"
+      "CPU times: user 1.66 s, sys: 21.8 ms, total: 1.68 s\n",
+      "Wall time: 1.69 s\n"
      ]
     }
    ],
@@ -2352,7 +2352,7 @@
    ],
    "source": [
     "trashes = get_dataset('2542')\n",
-    "trashes['start'] = date(day=1, month=1, year=2017)\n",
+    "trashes['start'] = \"01.01.2017\"\n",
     "trashes['end'] = date.today().strftime('%d.%m.%Y')"
    ]
   },
@@ -2474,7 +2474,7 @@
    ],
    "source": [
     "factories = get_dataset('2601')\n",
-    "factories['start'] = date(day=1, month=1, year=2017)\n",
+    "factories['start'] = \"01.01.2017\"\n",
     "factories['end'] = date.today().strftime('%d.%m.%Y')"
    ]
   },
@@ -2602,7 +2602,7 @@
    ],
    "source": [
     "markets = get_dataset('654')\n",
-    "markets['start'] = date(day=1, month=1, year=2017)\n",
+    "markets['start'] = \"01.01.2017\"\n",
     "markets['end'] = date.today().strftime('%d.%m.%Y')"
    ]
   },
@@ -2736,7 +2736,7 @@
    ],
    "source": [
     "autostations = get_dataset('1881')\n",
-    "autostations['start'] = date(day=1, month=1, year=2017)\n",
+    "autostations['start'] = \"01.01.2017\"\n",
     "autostations['end'] = date.today().strftime('%d.%m.%Y')"
    ]
   },
@@ -2889,7 +2889,7 @@
    ],
    "source": [
     "gasstations = get_dataset('753')\n",
-    "gasstations['start'] = date(day=1, month=1, year=2017)\n",
+    "gasstations['start'] = \"01.01.2017\"\n",
     "gasstations['end'] = date.today().strftime('%d.%m.%Y')"
    ]
   },
@@ -3041,7 +3041,7 @@
    ],
    "source": [
     "bad_gasstations = get_dataset('754')\n",
-    "bad_gasstations['start'] = date(day=1, month=1, year=2017)\n",
+    "bad_gasstations['start'] = \"01.01.2017\"\n",
     "bad_gasstations['end'] = date.today().strftime('%d.%m.%Y')"
    ]
   },
@@ -3282,67 +3282,100 @@
    "execution_count": 54,
    "id": "d8cddad7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_8173/1237908807.py:8: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
+      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
+      "\n",
+      "df[\"col\"][row_indexer] = value\n",
+      "\n",
+      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "  stroi['end'].loc[stroi['year'] == '-24'] = 2024\n",
+      "/tmp/ipykernel_8173/1237908807.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  stroi['end'].loc[stroi['year'] == '-24'] = 2024\n",
+      "/tmp/ipykernel_8173/1237908807.py:10: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
+      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
+      "\n",
+      "df[\"col\"][row_indexer] = value\n",
+      "\n",
+      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "  stroi['end'].loc[stroi['id'] == 2442] = 2018\n",
+      "/tmp/ipykernel_8173/1237908807.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  stroi['end'].loc[stroi['id'] == 2442] = 2018\n",
+      "/tmp/ipykernel_8173/1237908807.py:11: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
+      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
+      "\n",
+      "df[\"col\"][row_indexer] = value\n",
+      "\n",
+      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "  stroi['end'].loc[stroi['id'] == 2442] = 2018\n",
+      "/tmp/ipykernel_8173/1237908807.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  stroi['end'].loc[stroi['id'] == 2442] = 2018\n"
+     ]
+    }
+   ],
    "source": [
     "# предположим дома строительство дома и ремонт несколько лет, если нет даты оканчания значит предположим что дом строится с начала 2017 года\n",
     "stroi['start'] = \"01.01.2017\"\n",
     "# если у year года постройки нет срока и статус непстроен, то ставим будующую дату 2025\n",
     "stroi['year'] = stroi.apply(lambda x: \"2025\" if x['year'] == None and x['status'] != \"Объект введен в эксплуатацию\" else x['year'], axis=1)\n",
     "# т.к. год постройки year пустой а статус построен, то ставим год постройки ближайшей новостройки\n",
-    "stroi['end'] = stroi.apply(lambda x: stroi_year(x['near_years']) if x['year'] == None and x['status'] == \"Объект введен в эксплуатацию\" else x['year'], axis=1)"
+    "stroi['end'] = stroi.apply(lambda x: stroi_year(x['near_years']) if x['year'] == None and x['status'] == \"Объект введен в эксплуатацию\" else x['year'], axis=1)\n",
+    "# Замена значения в столбце 'stroi' на 2024, где значение столбца 'year' равно косячному '-24'\n",
+    "stroi['end'].loc[stroi['year'] == '-24'] = 2024\n",
+    "# Парк Горького даты нет, объектов в радусе километра нет, в описание есть год открытия после ремонта - 2018 \n",
+    "stroi['end'].loc[stroi['id'] == 2442] = 2018\n",
+    "stroi['end'].loc[stroi['id'] == 2442] = 2018"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "09331dbc",
+   "id": "9c329710",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 189214 entries, 1 to 4155\n",
-      "Data columns (total 23 columns):\n",
-      " #   Column           Non-Null Count   Dtype \n",
-      "---  ------           --------------   ----- \n",
-      " 0   start            189214 non-null  object\n",
-      " 1   end              189214 non-null  object\n",
-      " 2   air              291 non-null     object\n",
-      " 3   mean             903 non-null     object\n",
-      " 4   noise            3418 non-null    object\n",
-      " 5   dirt             124 non-null     object\n",
-      " 6   digging          6740 non-null    object\n",
-      " 7   capital          3490 non-null    object\n",
-      " 8   house_lines      31582 non-null   object\n",
-      " 9   clinics          280 non-null     object\n",
-      " 10  roads            3842 non-null    object\n",
-      " 11  parks            37 non-null      object\n",
-      " 12  transports       108 non-null     object\n",
-      " 13  city_places      3093 non-null    object\n",
-      " 14  live_area        103108 non-null  object\n",
-      " 15  streets          24 non-null      object\n",
-      " 16  trashes          26820 non-null   object\n",
-      " 17  factories        840 non-null     object\n",
-      " 18  markets          26 non-null      object\n",
-      " 19  autostations     8 non-null       object\n",
-      " 20  gasstations      308 non-null     object\n",
-      " 21  bad_gasstations  16 non-null      object\n",
-      " 22  stroi            4156 non-null    object\n",
-      "dtypes: object(23)\n",
-      "memory usage: 34.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ecology = fill_ecology(ecology, 'stroi', 'address', '', 'start', 'end', 'geoData')\n",
-    "ecology.info()"
+    "# удаляем в основном парки и промзоны, которые есть в отдельном датасете, но тут не дат\n",
+    "stroi = stroi[stroi['end'].notna()]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "09331dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecology = fill_ecology(ecology, 'stroi', 'address', '', 'start', 'end', 'geoData')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "2fccfb6e",
    "metadata": {},
    "outputs": [
@@ -3350,7 +3383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сохранено 189214 записей в ecology.gz\n"
+      "Сохранено 189165 записей в ecology.gz\n"
      ]
     }
    ],
