--- a/03.ipynb
+++ b/03.ipynb
@@ -20,6 +20,8 @@
     "import pandas as pd\n",
     "from datetime import date\n",
     "from decimal import Decimal\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "CACHE = {} # глобальный кэш, в процессе скрейпинга не обновлять!\n",
     "SETS = './sets/' # папка с файлами с наборами"
    ]
@@ -85,7 +87,20 @@
     "        json_data = json.dumps(data, ensure_ascii=False, default=default_serializer)\n",
     "        with gzip.open(SETS + filename + '.gz', 'wb') as gzip_file:\n",
     "            gzip_file.write(json_data.encode('utf-8'))\n",
-    "        print(f'Сохранено {len(data)} записей в {filename}.gz')"
+    "        print(f'Сохранено {len(data)} записей в {filename}.gz')\n",
+    "        \n",
+    "def sets_intersects(exams_set, start, end):\n",
+    "    \"\"\"\n",
+    "    Для уменьшения объема датасета ecology, проводим проверку, входят ли даты событий в наборы дат экзаменов\n",
+    "    \"\"\"\n",
+    "    #date_start = datetime.strptime(start, '%d.%m.%Y')\n",
+    "    #date_end = datetime.strptime(end, '%d.%m.%Y')\n",
+    "    date_range = pd.date_range(start=start, end=end)\n",
+    "    date_set = set(date_range)\n",
+    "    if date_set.intersection(exams_set):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -226,14 +241,6 @@
    "id": "f56089a7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_9915/1674301723.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  ecology[(ecology[ecology.columns[2:]].astype(str).applymap(len) < 4).all(axis=1)]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -400,16 +407,7 @@
    "execution_count": 7,
    "id": "4de3f257",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_9915/1506446114.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  ecology = ecology[~(ecology[ecology.columns[2:]].astype(str).applymap(len) < 4).all(axis=1)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# удаляем найденные выше записи\n",
     "ecology = ecology[~(ecology[ecology.columns[2:]].astype(str).applymap(len) < 4).all(axis=1)]"
@@ -894,6 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "for index, row in ecology.iterrows():\n",
     "    try:\n",
     "        ecology.loc[index, 'end'] = pd.to_datetime(row['end'], format='%d.%m.%Y')\n",
@@ -947,19 +946,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "d43fb7b0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1712"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.51 ms, sys: 988 µs, total: 5.5 ms\n",
+      "Wall time: 5.41 ms\n"
+     ]
     }
    ],
    "source": [
@@ -969,9 +966,7 @@
     "    start_date = datetime.strptime(i[0], '%d.%m.%Y')\n",
     "    end_date = datetime.strptime(i[1], '%d.%m.%Y')\n",
     "    date_range = pd.date_range(start=start_date, end=end_date)\n",
-    "    exams_set |= set(date_range)\n",
-    "    \n",
-    "len(exams_set)"
+    "    exams_set |= set(date_range)"
    ]
   },
   {
@@ -981,28 +976,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('01.03.2017', '30.09.2017'),\n",
-       " ('01.03.2018', '30.09.2018'),\n",
-       " ('01.03.2019', '30.09.2019'),\n",
-       " ('01.03.2022', '30.09.2022'),\n",
-       " ('01.03.2021', '30.09.2021'),\n",
-       " ('01.03.2020', '30.09.2020'),\n",
-       " ('01.03.2023', '30.09.2023'),\n",
-       " ('01.03.2024', '30.09.2024')]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 35s, sys: 2.23 s, total: 2min 38s\n",
+      "Wall time: 2min 37s\n"
+     ]
     }
    ],
    "source": [
-    "if set1.intersection(set2):\n",
-    "    print(\"Множества пересекаются\")\n",
-    "else:\n",
-    "    print(\"Множества не пересекаются\")"
+    "%%time\n",
+    "ecology['exams_period'] = ecology.apply(lambda x: sets_intersects(exams_set, x['start'], x['end']), axis=1)"
    ]
   },
   {
@@ -1010,21 +994,51 @@
    "execution_count": 21,
    "id": "7a025df8",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecology = ecology[ecology['exams_period'] == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "812d9286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecology['end'] = pd.to_datetime(ecology['end'], format='%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f1e0e94e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end_date =  datetime.strptime(\"2017-03-01\", '%Y-%m-%d')\n",
+    "ecology = ecology[ecology['end'] > end_date]\n",
+    "ecology.drop('exams_period', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fd182c25",
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2923"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сохранено 171731 записей в ecology.gz\n",
+      "Сохранено 5542 записей в exams.gz\n"
+     ]
     }
    ],
    "source": [
-    "date_list1  = pd.date_range(start='01.01.2017', end='01.01.2025')\n",
-    "len(set(date_list1))"
+    "save_dataset('ecology')\n",
+    "save_dataset('exams')"
    ]
   }
  ],
