--- a/02.ipynb
+++ b/02.ipynb
@@ -952,8 +952,8 @@
      "output_type": "stream",
      "text": [
       "Загружено 31448 записей из cache.gz в кэш\n",
-      "CPU times: user 72.4 ms, sys: 0 ns, total: 72.4 ms\n",
-      "Wall time: 72.9 ms\n"
+      "CPU times: user 70.5 ms, sys: 2.4 ms, total: 72.9 ms\n",
+      "Wall time: 73.7 ms\n"
      ]
     }
    ],
@@ -1398,8 +1398,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 31.4 ms, sys: 0 ns, total: 31.4 ms\n",
-      "Wall time: 31 ms\n"
+      "CPU times: user 31.8 ms, sys: 2.01 ms, total: 33.8 ms\n",
+      "Wall time: 32.9 ms\n"
      ]
     }
    ],
@@ -2051,8 +2051,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27.8 ms, sys: 1.82 ms, total: 29.6 ms\n",
-      "Wall time: 29.3 ms\n"
+      "CPU times: user 30.5 ms, sys: 106 µs, total: 30.6 ms\n",
+      "Wall time: 29.9 ms\n"
      ]
     }
    ],
@@ -2190,8 +2190,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.98 s, sys: 38.3 ms, total: 2.02 s\n",
-      "Wall time: 2.02 s\n"
+      "CPU times: user 2.05 s, sys: 31 ms, total: 2.08 s\n",
+      "Wall time: 2.09 s\n"
      ]
     }
    ],
@@ -3341,7 +3341,8 @@
    "outputs": [],
    "source": [
     "# т.к. не везде заполенны полигоны, то вместо пустоты добавляем точки и результата в новый столбец geoData\n",
-    "stroi['geoData'] = stroi.apply(lambda x: x['geoPolygon'] if x['geoPolygon'] is not None else x['geoPoint'], axis=1)"
+    "# stroi['geoData'] = stroi.apply(lambda x: x['geoPolygon'] if x['geoPolygon'] is not None else x['geoPoint'], axis=1)\n",
+    "stroi['geoData'] = stroi.apply(lambda x: x['geoPoint'], axis=1)"
    ]
   },
   {
